--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>אתר אילן היוחסין המשפחתי</title>
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="app.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1>✨ ברוכים הבאים לאתר אילן היוחסין המשפחתי שלנו</h1>
-      <p>
-        מבית משפחות: Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum,
-        Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander,
-        Izaks, Chapon ועוד.
-      </p>
-      <p>
-        כאן תוכלו לגלות את שורשי המשפחה, להעלות זיכרונות, לשתף תמונות, לקרוא ביוגרפיות
-        של יקירינו, לשמור על קשר ולחגוג יחד את המורשת שלנו.
-      </p>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <title>אתר אילן היוחסין של משפחות Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum,Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon ועוד</title>
+  <link rel="stylesheet" href="/style.css" />
+</head>
+<body>
+  <header>
+    <img src="/assets/logo.png" alt="לוגו משפחתי" class="logo" />
+    <h1>ברוכים הבאים לאתר המשפחה</h1>
+    <h2>Ben Abou • Elharrar • Malca • ועוד</h2>
+  </header>
 
-    <nav>
-      <ul>
-        <li><a href="#tree">🌳 אילן יוחסין</a></li>
-        <li><a href="#biographies">📖 ביוגרפיות</a></li>
-        <li><a href="#memory">🕯️ זיכרון</a></li>
-        <li><a href="#gallery">📸 גלריה</a></li>
-        <li><a href="#calendar">📅 לוח שנה</a></li>
-        <li><a href="#messages">✉️ הודעות</a></li>
-        <li><a href="#login">🔐 התחברות</a></li>
-        <li><a href="#contact">📬 צור קשר</a></li>
-      </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="/">🏠 עמוד ראשי</a></li>
+      <li><a href="/tree.html">🧬 עץ המשפחה</a></li>
+      <li><a href="/chat.html">🧑‍💻 צ'אט AI</a></li>
+      <li><a href="/messages.html">📩 הודעות</a></li>
+      <li><a href="/gallery.html">📁 גלריה</a></li>
+      <li><a href="/yizkor.html">🕯️ קיר זיכרון</a></li>
+      <li><a href="/login.html">🔐 כניסה</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section>
+      <h3>🌟 ברוכים הבאים למרכז המשפחתי</h3>
+      <p>אתר זה נבנה עבור כל המשפחות: Ben Abou, Elharrar, Malca, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
+      <p>ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.</p>
+    </section>
+
+    <section class="hero-image">
+      <img src="/assets/family-hero.jpg" alt="תמונת משפחה" />
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 אתר המשפחה • נבנה באהבה ע"י המשפחה • <a href="/admin.html">ניהול</a></p>
+  </footer>
+</body>
+</html>
+
 
     <main>
       <section id="tree">
