--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>אתר אילן היוחסין של משפחות Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum,Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon ועוד</title>
+  <title>אתר המשפחה - Ben Abou, Elharrar ועוד</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
@@ -42,60 +42,3 @@
 </body>
 </html>
 
-
-    <main>
-      <section id="tree">
-        <h2>🌳 עץ משפחה</h2>
-        <div id="familyTreeContainer">טוען את אילן היוחסין...</div>
-      </section>
-
-      <section id="biographies">
-        <h2>📖 ביוגרפיות</h2>
-        <div id="biographiesContainer">טוען ביוגרפיות...</div>
-      </section>
-
-      <section id="memory">
-        <h2>🕯️ נר זיכרון</h2>
-        <div id="memorialContainer">טוען אזור זיכרון...</div>
-      </section>
-
-      <section id="gallery">
-        <h2>📸 גלריה משפחתית</h2>
-        <div id="galleryContainer">תמונות יופיעו כאן...</div>
-      </section>
-
-      <section id="calendar">
-        <h2>📅 לוח שנה משפחתי</h2>
-        <div id="calendarContainer">אירועים משפחתיים נטענים...</div>
-      </section>
-
-      <section id="messages">
-        <h2>✉️ תיבת הודעות</h2>
-        <div id="messagesContainer">הודעות יוצגו כאן...</div>
-      </section>
-
-      <section id="login">
-        <h2>🔐 התחברות</h2>
-        <form id="loginForm">
-          <input type="text" placeholder="שם משתמש או מייל" required />
-          <input type="password" placeholder="סיסמה" required />
-          <button type="submit">התחבר</button>
-        </form>
-      </section>
-
-      <section id="contact">
-        <h2>📬 צור קשר</h2>
-        <form id="contactForm">
-          <input type="text" placeholder="שמך" required />
-          <input type="email" placeholder="האימייל שלך" required />
-          <textarea placeholder="ההודעה שלך..." required></textarea>
-          <button type="submit">שלח</button>
-        </form>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2025 אתר המשפחה - כל הזכויות שמורות</p>
-    </footer>
-  </body>
-</html>
