--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main>
     <section>
       <h3>🌟 ברוכים הבאים למרכז המשפחתי</h3>
-      <p>אתר זה נבנה עבור כל המשפחות: Ben Abou, Elharrar, Malca, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
+      <p>אתר זה נבנה עבור כל המשפחות: Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum,Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
       <p>ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.</p>
     </section>
 
