--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
       <li><a href="/">🏠 עמוד ראשי</a></li>
       <li><a href="/tree.html">🧬 עץ המשפחה</a></li>
       <li><a href="/chat.html">🧑‍💻 צ'אט AI</a></li>
-      <li><a href="/messages.html">📩 הודעות</a></li>
+      <li><a href="/inbox.html">📩 הודעות</a></li>
       <li><a href="/gallery.html">📁 גלריה</a></li>
-      <li><a href="/yizkor.html">🕯️ קיר זיכרון</a></li>
+      <li><a href="/memorial.html">🕯️ קיר זיכרון</a></li>
       <li><a href="/login.html">🔐 כניסה</a></li>
     </ul>
   </nav>
