--- a/public/memorial.html
+++ b/public/memorial.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>קיר זיכרון</h1>
+  <h1>🕯️ קיר זיכרון משפחתי</h1>
   <form id="memorialForm">
     <input type="text" placeholder="שם הנפטר" id="name" required>
     <textarea placeholder="הקדשה..." id="dedication" required></textarea>
@@ -37,6 +37,18 @@
         })
       });
       location.reload();
+   
+  <main>
+    <section class="memorial-entry">
+      <img src="/assets/frank.jpg" alt="פרנק ון דר ולדה" />
+      <h2>פרנק ון דר ולדה</h2>
+      <p>נולד: 1943</p>
+      <p>נפטר: 6 ביולי 2025, קייפטאון, דרום אפריקה</p>
+      <div class="candle"></div>
+    </section>
+  </main>
+</body>
+</html>
     });
   </script>
 </body>
