--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       <li><a href="/inbox.html">📩 הודעות</a></li>
       <li><a href="/gallery.html">📁 גלריה</a></li>
       <li><a href="/memorial.html">🕯️ קיר זיכרון</a></li>
+      <li><a href="/timeline.html">🗓️ ציר זמן</a></li>
+      <li><a href="/forum.html">👪 פורום משפחתי</a></li>
+      <li><a href="/newsletter.html">📰 עלון</a></li>
+      <li><a href="/admin.html">🛠️ ניהול</a></li>
       <li><a href="/login.html">🔐 כניסה</a></li>
     </ul>
   </nav>
