--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
       <li><a href="/gallery.html">📁 גלריה</a></li>
       <li><a href="/memorial.html">🕯️ קיר זיכרון</a></li>
       <li><a href="/timeline.html">🗓️ ציר זמן</a></li>
+       <li><a href="/calendar.html">📆 לוח שנה</a></li>
       <li><a href="/forum.html">👪 פורום משפחתי</a></li>
+       <li><a href="/biographies.html">📖 ביוגרפיות</a></li>
       <li><a href="/newsletter.html">📰 עלון</a></li>
       <li><a href="/admin.html">🛠️ ניהול</a></li>
       <li><a href="/login.html">🔐 כניסה</a></li>
