--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
        <li><a href="/calendar.html">📆 לוח שנה</a></li>
       <li><a href="/forum.html">👪 פורום משפחתי</a></li>
        <li><a href="/biographies.html">📖 ביוגרפיות</a></li>
+        <li><a href="/statistics.html">📊 סטטיסטיקות</a></li>
       <li><a href="/newsletter.html">📰 עלון</a></li>
       <li><a href="/admin.html">🛠️ ניהול</a></li>
       <li><a href="/login.html">🔐 כניסה</a></li>
