--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>לוח ניהול - עץ משפחתי</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>🎛️ דשבורד ניהול</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .dashboard { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; padding: 2rem; }
+    .card { background: #f4f4f4; padding: 1rem; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+    .card h3 { margin-top: 0; }
+  </style>
 </head>
 <body>
-  <main class="dashboard-container">
-    <h1>ברוך הבא ללוח הניהול</h1>
-    
-    <section class="quick-links">
-      <h2>קישורים מהירים</h2>
-      <ul>
-        <li><a href="gedcom-viewer.html">עץ משפחה</a></li>
-        <li><a href="messages.html">הודעות פרטיות</a></li>
-        <li><a href="admin-users.html">ניהול משתמשים</a></li>
-        <li><a href="memory-wall.html">קיר משפחתי</a></li>
-        <li><a href="newsletter.html">שליחת ניוזלטר</a></li>
-      </ul>
-    </section>
-
-    <section class="stats">
-      <h2>סטטיסטיקות כלליות</h2>
-      <p>מס' משתמשים: <strong>127</strong></p>
-      <p>מס' משפחות: <strong>15</strong></p>
-      <p>ביוגרפיות שהוזנו: <strong>63</strong></p>
-      <p>זיכרונות אחרונים: <strong>7</strong></p>
-    </section>
+  <header><h1>🎛️ דשבורד ניהול המשפחה</h1></header>
+  <main class="dashboard">
+    <div class="card">
+      <h3>👥 ניהול משתמשים</h3>
+      <p><a href="/users.html">צפייה / עריכה</a></p>
+    </div>
+    <div class="card">
+      <h3>🧬 עץ משפחה</h3>
+      <p><a href="/tree-admin.html">ניהול עץ</a></p>
+    </div>
+    <div class="card">
+      <h3>📩 הודעות</h3>
+      <p><a href="/inbox.html">צפייה בהודעות</a></p>
+    </div>
+    <div class="card">
+      <h3>📢 דיוורים</h3>
+      <p><a href="/newsletter.html">ניהול עלונים</a></p>
+    </div>
   </main>
 </body>
 </html>
