--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <h2>Ben Abou • Elharrar • Malca • ועוד</h2>
   </header>
 
+  <header>
+
   <nav>
     <ul>
       <li><a href="/">🏠 עמוד ראשי</a></li>
@@ -25,11 +27,14 @@
       <li><a href="/forum.html">👪 פורום משפחתי</a></li>
        <li><a href="/biographies.html">📖 ביוגרפיות</a></li>
         <li><a href="/statistics.html">📊 סטטיסטיקות</a></li>
+      <li><a href="about.html">ℹ️ אודות</a></li>
       <li><a href="/newsletter.html">📰 עלון</a></li>
       <li><a href="/admin.html">🛠️ ניהול</a></li>
+      <li><a href="search.html">🔍 חיפוש</a></li>
       <li><a href="/login.html">🔐 כניסה</a></li>
     </ul>
   </nav>
+  </header>
 
   <main>
     <section>
