--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,22 @@
       <p>אתר זה נבנה עבור כל המשפחות: Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum,Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
       <p>ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.</p>
     </section>
+      <main>
+    <h1>ברוכים הבאים לעץ המשפחה שלנו</h1>
+    <ul class="features">
+      <li>🌳 עץ משפחה אינטראקטיבי מהקובץ GEDCOM</li>
+      <li>🔐 כניסת משתמשים והרשאות לפי צד משפחתי</li>
+      <li>💬 קיר משפחתי לפוסטים ותגובות</li>
+      <li>📨 מערכת הודעות פנימית</li>
+      <li>🖼️ תצוגת גלריה למסמכים ותמונות</li>
+      <li>🕯️ עמודי הנצחה עם נר דיגיטלי</li>
+      <li>🌐 תפריט דו-לשוני (עברית/אנגלית)</li>
+      <li>🔍 חיפוש חכם</li>
+      <li>📧 תמיכה ב-ניוזלטר</li>
+      <li>🤖 צ’אט AI משפחתי עם תמיכה בנתוני משפחה</li>
+      <li>📱 תמיכה בעיצוב רספונסיבי לנייד</li>
+    </ul>
+  </main>
 
     <section class="hero-image">
       <img src="/assets/family-hero.jpg" alt="תמונת משפחה" />
