--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <li><a href="/tree.html">🧬 עץ המשפחה</a></li>
       <li><a href="/chat.html">🧑‍💻 צ'אט AI</a></li>
       <li><a href="/inbox.html">📩 הודעות</a></li>
-      <li><a href="/gallery.html">📁 גלריה</a></li>
+      <li><a href="/gallery.html">🖼️ גלריית תמונות</a></li>
       <li><a href="/memorial.html">🕯️ קיר זיכרון</a></li>
       <li><a href="/timeline.html">🗓️ ציר זמן</a></li>
        <li><a href="/calendar.html">📆 לוח שנה</a></li>
@@ -31,7 +31,7 @@
       <li><a href="/newsletter.html">📰 עלון</a></li>
       <li><a href="/admin.html">🛠️ ניהול</a></li>
       <li><a href="search.html">🔍 חיפוש</a></li>
-      <li><a href="/login.html">🔐 כניסה</a></li>
+      <li><a href="/login.html">🔐 כניסת משתמשים</a></li>
     </ul>
   </nav>
   </header>
