--- a/public/login.html
+++ b/public/login.html
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>כניסה - אילן יוחסין</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>התחברות לאתר המשפחה</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main class="login-container">
-    <h1>התחברות למערכת המשפחתית</h1>
-    <form id="loginForm">
-      <label for="username">שם משתמש:</label>
-      <input type="text" id="username" name="username" required>
-
-      <label for="password">סיסמה:</label>
-      <input type="password" id="password" name="password" required>
-
+    <h1>התחברות</h1>
+    <form method="POST" action="/login">
+      <label>שם משתמש:</label>
+      <input type="text" name="username" required />
+      <label>סיסמה:</label>
+      <input type="password" name="password" required />
       <button type="submit">התחבר</button>
     </form>
-    <div id="loginMessage"></div>
+    <p>אין לך חשבון? <a href="register.html">הרשם</a></p>
   </main>
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
-      const res = await fetch("/api/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ username, password }),
-      });
-
-      const data = await res.json();
-      if (data.success) {
-        window.location.href = "/";
-      } else {
-        document.getElementById("loginMessage").textContent = data.message;
-      }
-    });
-  </script>
 </body>
 </html>
+
