--- a/public/admin.html
+++ b/public/admin.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>ניהול האתר</title>
-  <link rel="stylesheet" href="/style.css" />
+  <meta charset="UTF-8">
+  <title>ניהול משתמשים</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main>
-    <h1>⚙️ ממשק ניהול</h1>
-    <p>כאן ניתן לעדכן עץ משפחה, להוסיף תמונות, לנהל משתמשים ולצפות בהודעות.</p>
-  </main>
+  <h1>לוח ניהול</h1>
+  <div id="userList">
+    <!-- כאן נטען המשתמשים -->
+  </div>
+  <script src="admin.js"></script>
 </body>
 </html>
