--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>📬 צור קשר</h1>
-  <form action="mailto:you@example.com" method="POST">
+  <form action="mailto:yairben2013@gmail.com" method="POST">
     <label>שם: <input type="text" name="name"></label><br>
     <label>אימייל: <input type="email" name="email"></label><br>
     <label>הודעה: <textarea name="message"></textarea></label><br>
