--- a/public/admin.html
+++ b/public/admin.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <title>ניהול משתמשים</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+<html lang="he">
+<head><meta charset="UTF-8"><title>ממשק ניהול</title></head>
 <body>
-  <h1>לוח ניהול</h1>
-  <div id="userList">
-    <!-- כאן נטען המשתמשים -->
-  </div>
-  <script src="admin.js"></script>
+<h1>ממשק ניהול האתר</h1>
+<ul>
+  <li><a href="/tree.html">עץ משפחתי</a></li>
+  <li><a href="/memorial.html">עמוד הנצחה</a></li>
+  <li><a href="/forum.html">פורום</a></li>
+  <li><a href="/calendar.html">לוח שנה משפחתי</a></li>
+  <li><a href="/book.html">ספר משפחתי</a></li>
+</ul>
+<a href="/logout">התנתקות</a>
 </body>
 </html>
