--- a/public/forum.html
+++ b/public/forum.html
@@ -19,6 +19,11 @@
         <button type="submit">פרסם</button>
       </form>
     </section>
+    <form>
+      <br>
+        <textarea placeholder="הודעה חדשה..."></textarea>
+      <br>
+    </form>
 
     <section id="forum-threads">
       <h2>📚 נושאים אחרונים</h2>
