--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <nav>
     <ul>
       <li><a href="/">🏠 עמוד ראשי</a></li>
+        <li><a href="about.html">ℹ️ אודות</a></li>
       <li><a href="/tree.html">🧬 עץ המשפחה</a></li>
       <li><a href="/chat.html">🧑‍💻 צ'אט AI</a></li>
       <li><a href="/inbox.html">📩 הודעות</a></li>
@@ -27,11 +28,18 @@
       <li><a href="/forum.html">👪 פורום משפחתי</a></li>
        <li><a href="/biographies.html">📖 ביוגרפיות</a></li>
         <li><a href="/statistics.html">📊 סטטיסטיקות</a></li>
-      <li><a href="about.html">ℹ️ אודות</a></li>
-      <li><a href="/newsletter.html">📰 עלון</a></li>
-      <li><a href="/admin.html">🛠️ ניהול</a></li>
-      <li><a href="search.html">🔍 חיפוש</a></li>
-      <li><a href="/login.html">🔐 כניסת משתמשים</a></li>
+        <li><a href="/tree.html">עץ משפחה</a></li>
+        <li><a href="/update-request.html">עדכון פרטים</a></li>
+        <li><a href="/upload-photo.html">העלאת תמונות</a></li>
+        <li><a href="/upload-video.html">העלאת סרטון</a></li>
+        <li><a href="/search-ai.html">חיפוש AI</a></li>
+        <li><a href="/migration-map.html">מפת נדודים</a></li>
+        <li><a href="/newsletter.html">📰 עלון</a></li>
+        <li><a href="/admin.html">🛠️ ניהול</a></li>
+        <li><a href="search.html">🔍 חיפוש</a></li>
+        <li><a href="/login.html">🔐 כניסת משתמשים</a></li>
+        <li><a href="/logout">התנתקות</a></li>
+
     </ul>
   </nav>
   </header>
