--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,12 @@
       <li><a href="/forum.html">👪 פורום משפחתי</a></li>
        <li><a href="/biographies.html">📖 ביוגרפיות</a></li>
         <li><a href="/statistics.html">📊 סטטיסטיקות</a></li>
-        <li><a href="/tree.html">עץ משפחה</a></li>
         <li><a href="/update-request.html">עדכון פרטים</a></li>
         <li><a href="/upload-photo.html">העלאת תמונות</a></li>
         <li><a href="/upload-video.html">העלאת סרטון</a></li>
         <li><a href="/search-ai.html">חיפוש AI</a></li>
         <li><a href="/migration-map.html">מפת נדודים</a></li>
         <li><a href="/newsletter.html">📰 עלון</a></li>
-        <li><a href="/admin.html">🛠️ ניהול</a></li>
         <li><a href="search.html">🔍 חיפוש</a></li>
         <li><a href="/login.html">🔐 כניסת משתמשים</a></li>
         <li><a href="/logout">התנתקות</a></li>
@@ -73,7 +71,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 אתר המשפחה • נבנה באהבה ע"י המשפחה • <a href="/admin.html">ניהול</a></p>
+    <p>&copy; 2025 אתר המשפחה • נבנה באהבה ע"י המשפחה • <a href="/admin.html">🛠️ ניהול</a></p>
   </footer>
 </body>
 </html>
