--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     <h1>ברוכים הבאים לאתר המשפחה</h1>
     <h2>Ben Abou • Elharrar • Malca • ועוד</h2>
   </header>
-
+<h1>🔍 חיפוש משפחתי</h1>
+  <input type="text" id="search" placeholder="הקלד שם או תיאור...">
+  <div id="results"></div>
   <header>
 
   <nav>
