--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html> lang="he" dir="rtl">
+<html> <lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <title>אתר המשפחה - Ben Abou, Elharrar ועוד</title>
