--- a/public/tree.html
+++ b/public/tree.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html> <lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <title>עץ המשפחה שלנו</title>
