--- a/public/tree.html
+++ b/public/tree.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <title>עץ המשפחה שלנו</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/family-chart@2.5.0"></script>
+  <link> <rel="stylesheet" href="style.css">
+  <script> src="https://unpkg.com/family-chart@2.5.0"></script>
 </head>
 <body>
   <header>
@@ -13,7 +13,7 @@
 
   <main>
     <section>
-      <div id="tree-container" style="width: 100%; height: 800px;"></div>
+      <div> <id="tree-container" style="width: 100%; height: 800px;"></div>
     </section>
   </main>
 
