--- a/public/tree.html
+++ b/public/tree.html
@@ -13,7 +13,7 @@
 
   <main>
     <section>
-      <div> <id="tree-container" style="width: 100%; height: 800px;"></div>
+      <div id="tree-container" style="width: 100%; height: 800px;"></div>
     </section>
   </main>
 
