--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -1,21 +1,95 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>🔧 לוח ניהול</title>
-  <link rel="stylesheet" href="/style.css" />
+  <meta charset="UTF-8">
+  <title>📋 דשבורד ניהול משתמשים</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      text-align: center;
+      padding: 20px;
+    }
+    table {
+      width: 90%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      background-color: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 12px;
+      border: 1px solid #ddd;
+    }
+    th {
+      background-color: #007bff;
+      color: white;
+    }
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+    button {
+      padding: 6px 10px;
+      color: white;
+      background-color: #dc3545;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #c82333;
+    }
+  </style>
+  <script>
+    async function deleteUser(username) {
+      if (confirm("האם אתה בטוח שברצונך למחוק את המשתמש '" + username + "'?")) {
+        const res = await fetch("/delete-user", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username })
+        });
+        const msg = await res.text();
+        alert(msg);
+        location.reload();
+      }
+    }
+
+    window.onload = () => {
+      fetch("/admin-users")
+        .then(res => res.json())
+        .then(users => {
+          const table = document.getElementById("userTable");
+          users.forEach(u => {
+            const tr = document.createElement("tr");
+            tr.innerHTML = `
+              <td>${u.username}</td>
+              <td>${u.role}</td>
+              <td>${u.side}</td>
+              <td><button onclick="deleteUser('${u.username}')">🗑️ מחק</button></td>
+            `;
+            table.appendChild(tr);
+          });
+        });
+    };
+  </script>
 </head>
 <body>
-  <header>
-    <h1>ניהול האתר</h1>
-  </header>
   <main>
-    <ul>
-      <li><a href="/suggest-edit.html">צפייה בהצעות</a></li>
-      <li><a href="/newsletter.html">עריכת עלון</a></li>
-      <li><a href="/guest-access.html">כניסת אורחים</a></li>
-      <!-- ועוד -->
-    </ul>
+    <h1>📋 דשבורד ניהול משתמשים</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>שם משתמש</th>
+          <th>תפקיד</th>
+          <th>צד משפחתי</th>
+          <th>🗑️ מחיקה</th>
+        </tr>
+      </thead>
+      <tbody id="userTable">
+        <!-- נטען מהשרת -->
+      </tbody>
+    </table>
   </main>
 </body>
 </html>
