--- a/public/calendar.html
+++ b/public/calendar.html
@@ -13,7 +13,7 @@
   <main>
     <ul>
       <li>🕯️ 6 ביולי – אזכרה לפרנק ון דר ולדה</l
-      <li>באוגוסט- יום הולדת לסבתא סוזן 🎂</li>
+      <p><li>באוגוסט- יום הולדת לסבתא סוזן 🎂</li></p>
     </ul>
   </main>
 </body>
