--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </header>
 <h1>🔍 חיפוש משפחתי</h1>
   <input type="text" id="search" placeholder="הקלד שם או תיאור...">
-  <div id="results"></div>
+  div id="results"></div>
   <header>
 
   <nav>
