--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         <li><a href="/newsletter.html">📰 עלון</a></li>
         <li><a href="search.html">🔍 חיפוש</a></li>
         <li><a href="/login.html">🔐 כניסת משתמשים</a></li>
+      <Link to="/search">🔍 חיפוש</Link>
         <li><a href="/logout">התנתקות</a></li>
 
     </ul>
