--- a/public/index.html
+++ b/public/index.html
@@ -11,34 +11,34 @@
     <h2>Ben Abou • Elharrar • Malca • ועוד</h2>
   </header>
 <h1>🔍 חיפוש משפחתי</h1>
-  input type="text" id="search" placeholder="הקלד שם או תיאור...">
+  <input type="text" id="search" placeholder="הקלד שם או תיאור...">
  <div id="results"></div>
   <header>
 
   <nav>
     <ul>
-      <li><a href="/">🏠 עמוד ראשי</a></li>
-        <li><a href="about.html">ℹ️ אודות</a></li>
-      <li><a href="/tree.html">🧬 עץ המשפחה</a></li>
-      <li><a href="/chat.html">🧑‍💻 צ'אט AI</a></li>
-      <li><a href="/inbox.html">📩 הודעות</a></li>
-      <li><a href="/gallery.html">🖼️ גלריית תמונות</a></li>
-      <li><a href="/memorial.html">🕯️ קיר זיכרון</a></li>
-      <li><a href="/timeline.html">🗓️ ציר זמן</a></li>
-       <li><a href="/calendar.html">📆 לוח שנה</a></li>
-      <li><a href="/forum.html">👪 פורום משפחתי</a></li>
-       <li><a href="/biographies.html">📖 ביוגרפיות</a></li>
-        <li><a href="/statistics.html">📊 סטטיסטיקות</a></li>
-        <li><a href="/update-request.html">עדכון פרטים</a></li>
-        <li><a href="/upload-photo.html">העלאת תמונות</a></li>
-        <li><a href="/upload-video.html">העלאת סרטון</a></li>
-        <li><a href="/search-ai.html">חיפוש AI</a></li>
-        <li><a href="/migration-map.html">מפת נדודים</a></li>
-        <li><a href="/newsletter.html">📰 עלון</a></li>
-        <li><a href="search.html">🔍 חיפוש</a></li>
-        <li><a href="/login.html">🔐 כניסת משתמשים</a></li>
+      <a href="/">🏠 עמוד ראשי</a>
+        <a href="about.html"> <span>ℹ️</span> אודות</a>
+      <a href="/tree.html"> <span>🧬</span> עץ המשפחה</a>
+      <a href="/chat.html"> <span>🧑‍💻</span> צ'אט AI</a>
+      <a href="/inbox.html"> <span>📩 </span>הודעות</a>
+      <<a href="/gallery.html"> <span>🖼️</span> גלריית תמונות</a>
+      ><a href="/memorial.html"><span>🕯️</span> קיר זיכרון</a>
+      <<a href="/timeline.html"><span>🗓️</span> ציר זמן</a>
+       <a href="/calendar.html"> <span>📆</span> לוח שנה</a>
+      <a href="/forum.html"> <span>👪</span> פורום משפחתי</a>
+        <a href="/biographies.html"><span>📖</span> ביוגרפיות</a>
+        <li><a href="/statistics.html"><span>📊</span> סטטיסטיקות</a>
+       <a href="/update-request.html">עדכון פרטים</a>
+        <a href="/upload-photo.html">העלאת תמונות</a>
+        <a href="/upload-video.html">העלאת סרטון</a>
+      <a href="/search-ai.html">חיפוש AI</a>
+        <a href="/migration-map.html">מפת נדודים</a>
+     <a href="/newsletter.html"><span>📰</span> עלון</a>
+        <a href="search.html"><span>🔍</span> חיפוש</a>
+        <a href="/login.html"><span>🔐</span> כניסת משתמשים</a>
       <Link to="/search">🔍 חיפוש</Link>
-        <li><a href="/logout">התנתקות</a></li>
+        <li><a href="/logout">התנתקות</a>
 
     </ul>
   </nav>
