--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
   <nav>
     <ul>
+       <div class="menu-bar">
       <a href="/">🏠 עמוד ראשי</a>
         <a href="about.html"> <span>ℹ️</span> אודות</a>
       <a href="/tree.html"> <span>🧬</span> עץ המשפחה</a>
