--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <h1>ברוכים הבאים לאתר המשפחה</h1>
     <h2>Ben Abou • Elharrar • Malca • ועוד</h2>
   </header>
-<h1>🔍 חיפוש משפחתי</h1>
+<h1>🔍 חיפוש באתר</h1>
   <input type="text" id="search" placeholder="הקלד שם או תיאור...">
  <div id="results"></div>
   <header>
